--- a/app/partials/pages/landing-1/_hero.njk
+++ b/app/partials/pages/landing-1/_hero.njk
@@ -5,7 +5,7 @@
             <div class="col-lg-6 col-md-9">
                 <div class="hero-section-01__content page-title-block" data-aos="fade-right" data-aos-duration="800" data-aos-delay="1000">
                     <h6 class="subtitle">Hello Mate <span class="wave">👋</span></h6>
-                    <h1 class="title">I’m Michle Smith a <span class="text-primary d-inline">Web Developer</span></h1>
+                    <h1 class="title">I’m Michle Smith a <span class="text-primary d-inline typed"></span></h1>
                     <p class="text-dark">Hi, I'm Michle a freelance web designer from San-Francisco. I help brands turn their ideas into high quality products.</p>
                     <div class="hero-section-01__content--button-group">
                         <a class="btn btn-1 btn-primary" href="#">
