--- a/app/partials/pages/landing-2/_about.njk
+++ b/app/partials/pages/landing-2/_about.njk
@@ -5,6 +5,9 @@
                 <div class="col-lg-6 col-md-10 col-sm-11">
                     <div class="about-section-02__image-group mb-5 mt-lg-0"  data-aos="fade-up" data-aos-duration="800" data-aos-delay="600">
                         <img src="./image/l-2/about.png" alt="about-img" class="w-100">
+                        <div class="experience-card">
+                            <h2>25+ <span>Years Of <br /> Experience</span></h2>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-10 col-sm-11">
