--- a/app/partials/pages/landing-2/_portfolio.njk
+++ b/app/partials/pages/landing-2/_portfolio.njk
@@ -32,9 +32,9 @@
                     </div>
                 </div>
             </div>
-            <div class="row card-row portfolio-masonry portfolio-active">
+            <div class="row card-row portfolio-masonry portfolio-active gx-5">
                 <div class="col-lg-6 grid-item portfolio-1 portfolio-2">
-                    <div class="portfolio-card portfolio-card--02">
+                    <div class="portfolio-card one portfolio-card--02">
                         <div class="portfolio-img">
                             <a data-fancybox href="./image/l-2/project-1.png">
                                 <img src="./image/l-2/project-1.png" alt="portfolio" class="w-100">
@@ -49,7 +49,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 grid-item portfolio-2 portfolio-3 portfolio-4">
-                    <div class="portfolio-card portfolio-card--02">
+                    <div class="portfolio-card two portfolio-card--02">
                         <div class="portfolio-img">
                             <a href="./image/l-2/project-2.png" data-fancybox>
                                 <img src="./image/l-2/project-2.png" alt="portfolio" class="w-100">
@@ -68,7 +68,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 grid-item portfolio-3 portfolio-2">
-                    <div class="portfolio-card portfolio-card--02">
+                    <div class="portfolio-card three portfolio-card--02">
                         <div class="portfolio-img">
                         <a href="./image/l-2/project-3.png" data-fancybox>
                             <img src="./image/l-2/project-3.png" alt="portfolio" class="w-100">
@@ -87,7 +87,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 grid-item portfolio-1 portfolio-4">
-                    <div class="portfolio-card portfolio-card--02">
+                    <div class="portfolio-card four portfolio-card--02">
                         <div class="portfolio-img">
                         <a href="./image/l-2/project-4.png" data-fancybox>
                             <img src="./image/l-2/project-4.png" alt="portfolio" class="w-100">
