--- a/app/partials/pages/landing-3/_hero.njk
+++ b/app/partials/pages/landing-3/_hero.njk
@@ -1,32 +1,128 @@
 {% macro render(args) %}
-    <div class="hero-section-03 bg-white-lilac">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-xl-8 col-lg-9">
-                    <div class="hero-section-03__content page-title-block-two text-center">
-                        <h2 class="title">Manage Your Projects & Connect With Team Easily With Bestkit</h2>
-                        <p class="text-dark">The intelligent way to manage your projects.</p>
-                        <div class="hero-section-03__content--newsletter hero-newsletter-01">
-                            <form action="#">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Enter your mail address">
-                                    <div class="icon">
-                                        <img src="./image/l-2/mail.png" alt="mail">
-                                    </div>
+<div class="hero-section-03 bg-white-lilac">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-xl-8 col-lg-9">
+                <div class="hero-section-03__content page-title-block-two text-center">
+                    <h2 class="title">Manage Your Projects & Connect With Team Easily With Bestkit</h2>
+                    <p class="text-dark">The intelligent way to manage your projects.</p>
+                    <div class="hero-section-03__content--newsletter hero-newsletter-01">
+                        <form action="#">
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Enter your mail address">
+                                <div class="icon">
+                                    <img src="./image/l-2/mail.png" alt="mail">
                                 </div>
-                                <button type="submit" class="btn btn-secondary">
-                                    Sign-Up. It’s Free!
-                                </button>
-                            </form>
-                        </div>
+                            </div>
+                            <button type="submit" class="btn btn-secondary">
+                                Sign-Up. It’s Free!
+                            </button>
+                        </form>
                     </div>
                 </div>
-                <div class="col-lg-10">
-                    <div class="hero-section-03__image-group">
-                        <img src="./image/l-3/dashboard.png" alt="dashboard" class="w-100">
-                    </div>
+            </div>
+            <div class="col-lg-10">
+                <div class="hero-section-03__image-group">
+                    <img src="./image/l-3/dashboard.png" alt="dashboard" class="w-100">
                 </div>
             </div>
         </div>
     </div>
+    <span class='hero-logo hero-logo--one'>
+        <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_1_4553)">
+                <path
+                    d="M23.1787 0.0739746H2.5747C1.19372 0.0739746 0.0742188 1.19348 0.0742188 2.57446V23.1784C0.0742188 24.5594 1.19372 25.6789 2.5747 25.6789H23.1787C24.5597 25.6789 25.6792 24.5594 25.6792 23.1784V2.57446C25.6792 1.19348 24.5597 0.0739746 23.1787 0.0739746Z"
+                    fill="url(#paint0_linear_1_4553)" />
+                <path
+                    d="M21.1503 3.40259H15.7412C15.0784 3.40259 14.541 3.93995 14.541 4.60282V13.4045C14.541 14.0674 15.0784 14.6047 15.7412 14.6047H21.1503C21.8132 14.6047 22.3505 14.0674 22.3505 13.4045V4.60282C22.3505 3.93995 21.8132 3.40259 21.1503 3.40259Z"
+                    fill="white" />
+                <path
+                    d="M10.0126 3.40259H4.60355C3.94068 3.40259 3.40332 3.93995 3.40332 4.60282V19.8057C3.40332 20.4686 3.94068 21.006 4.60355 21.006H10.0126C10.6755 21.006 11.2128 20.4686 11.2128 19.8057V4.60282C11.2128 3.93995 10.6755 3.40259 10.0126 3.40259Z"
+                    fill="white" />
+            </g>
+            <defs>
+                <linearGradient id="paint0_linear_1_4553" x1="12.8767" y1="0.0739746" x2="12.8767" y2="25.6789"
+                    gradientUnits="userSpaceOnUse">
+                    <stop stop-color="#0091E6" />
+                    <stop offset="1" stop-color="#0079BF" />
+                </linearGradient>
+                <clipPath id="clip0_1_4553">
+                    <rect width="25.6049" height="25.6049" fill="white" transform="translate(0.0742188 0.0739746)" />
+                </clipPath>
+            </defs>
+        </svg>
+    </span>
+    <span class='hero-logo hero-logo--two'>
+        <svg width="22" height="19" viewBox="0 0 22 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+                d="M16.7657 10.0542C14.2499 10.0542 12.2107 12.0398 12.2107 14.489C12.2107 16.9386 14.2499 18.9245 16.7657 18.9245C19.2812 18.9245 21.3203 16.9386 21.3203 14.489C21.3203 12.0398 19.2812 10.0542 16.7657 10.0542ZM4.93178 10.0545C2.41632 10.0547 0.376953 12.0398 0.376953 14.4893C0.376953 16.9386 2.41632 18.9243 4.93178 18.9243C7.44745 18.9243 9.48683 16.9386 9.48683 14.4893C9.48683 12.0397 7.44745 10.0545 4.93156 10.0545H4.93178ZM15.4035 4.51046C15.4035 6.95976 13.3643 8.94591 10.8489 8.94591C8.333 8.94591 6.29383 6.95976 6.29383 4.51046C6.29383 2.06116 8.333 0.0754395 10.8489 0.0754395C13.3643 0.0754395 15.4033 2.06116 15.4033 4.51046H15.4035Z"
+                fill="url(#paint0_radial_1_4540)" />
+            <defs>
+                <radialGradient id="paint0_radial_1_4540" cx="0" cy="0" r="1"
+                    gradientUnits="userSpaceOnUse"
+                    gradientTransform="translate(10.8515 10.3886) scale(13.8855 12.4969)">
+                    <stop stop-color="#FFB900" />
+                    <stop offset="0.6" stop-color="#F95D8F" />
+                    <stop offset="0.999" stop-color="#F95353" />
+                </radialGradient>
+            </defs>
+        </svg>
+    </span>
+    <span class='hero-logo hero-logo--three'>
+        <svg width="27" height="27" viewBox="0 0 27 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M5.65039 17.068C5.65039 18.6387 4.39864 19.9063 2.84765 19.9063C1.29667 19.9063 0.0449219 18.6344 0.0449219 17.068C0.0449219 15.5016 1.29667 14.2297 2.84765 14.2297H5.65039V17.068ZM7.04965 17.068C7.04965 15.4974 8.30139 14.2297 9.85238 14.2297C11.4034 14.2297 12.6551 15.4974 12.6551 17.068V24.1616C12.6551 25.7323 11.4034 26.9999 9.85238 26.9999C8.30139 26.9999 7.04965 25.7323 7.04965 24.1616V17.068Z"
+                fill="#E01E5A" />
+            <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M9.85197 5.67657C8.30098 5.67657 7.04924 4.40895 7.04924 2.83829C7.04924 1.26763 8.30098 0 9.85197 0C11.403 0 12.6547 1.26763 12.6547 2.83829V5.67657H9.85197ZM9.85197 7.11492C11.403 7.11492 12.6547 8.38255 12.6547 9.95321C12.6547 11.5239 11.403 12.7915 9.85197 12.7915H2.82617C1.27518 12.7915 0.0234375 11.5196 0.0234375 9.95321C0.0234375 8.38682 1.27518 7.11492 2.82617 7.11492H9.85197Z"
+                fill="#36C5F0" />
+            <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M21.0799 9.95321C21.0799 8.38255 22.3317 7.11492 23.8826 7.11492C25.4336 7.11492 26.6854 8.38255 26.6854 9.95321C26.6854 11.5239 25.4336 12.7915 23.8826 12.7915H21.0799V9.95321ZM19.6807 9.95321C19.6807 11.5239 18.4289 12.7915 16.8779 12.7915C15.3269 12.7915 14.0752 11.5239 14.0752 9.95321V2.83829C14.0752 1.26763 15.3269 0 16.8779 0C18.4289 0 19.6807 1.26763 19.6807 2.83829V9.95321Z"
+                fill="#2EB67D" />
+            <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M16.8779 21.3233C18.4289 21.3233 19.6807 22.5909 19.6807 24.1616C19.6807 25.7323 18.4289 26.9999 16.8779 26.9999C15.3269 26.9999 14.0752 25.7323 14.0752 24.1616V21.3233H16.8779ZM16.8779 19.9063C15.3269 19.9063 14.0752 18.6387 14.0752 17.068C14.0752 15.4974 15.3269 14.2297 16.8779 14.2297H23.9037C25.4547 14.2297 26.7065 15.4974 26.7065 17.068C26.7065 18.6387 25.4547 19.9063 23.9037 19.9063H16.8779Z"
+                fill="#ECB22E" />
+        </svg>
+    </span>
+    <span class='hero-logo hero-logo--four'>
+        <svg width="28" height="24" viewBox="0 0 28 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+                d="M2.11773 20.5677L3.35251 22.6135C3.60909 23.0442 3.97792 23.3826 4.41089 23.6287L8.8208 16.3069H0.000976562C0.000976562 16.7837 0.129265 17.2606 0.385842 17.6913L2.11773 20.5677Z"
+                fill="#0066DA" />
+            <path
+                d="M14.0004 7.69304L9.59053 0.371338C9.15756 0.617445 8.78873 0.955843 8.53215 1.38653L0.385842 14.9224C0.133984 15.3438 0.0013119 15.8211 0.000976562 16.3068H8.8208L14.0004 7.69304Z"
+                fill="#00AC47" />
+            <path
+                d="M23.5903 23.6287C24.0233 23.3826 24.3921 23.0442 24.6487 22.6135L25.1618 21.7675L27.6154 17.6913C27.872 17.2606 28.0003 16.7837 28.0003 16.3069H19.1797L21.0566 19.8447L23.5903 23.6287Z"
+                fill="#EA4335" />
+            <path
+                d="M13.9998 7.6931L18.4098 0.371361C17.9768 0.125252 17.4797 0.00219727 16.9665 0.00219727H11.0331C10.5199 0.00219727 10.0228 0.140634 9.58984 0.371361L13.9998 7.6931Z"
+                fill="#00832D" />
+            <path
+                d="M19.1804 16.3069H8.82106L4.41113 23.6285C4.84411 23.8746 5.34123 23.9977 5.85438 23.9977H22.147C22.6602 23.9977 23.1573 23.8593 23.5903 23.6285L19.1804 16.3069Z"
+                fill="#2684FC" />
+            <path
+                d="M23.5413 8.15449L19.4682 1.38653C19.2116 0.955843 18.8428 0.617445 18.4099 0.371338L14 7.69304L19.1796 16.3068H27.9832C27.9832 15.83 27.855 15.3531 27.5984 14.9224L23.5413 8.15449Z"
+                fill="#FFBA00" />
+        </svg>
+    </span>
+    <span class='hero-logo hero-logo--five'>
+        <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+                d="M12.9858 22.5778C7.70402 22.5778 3.42225 18.296 3.42225 13.0143C3.42225 7.73259 7.70402 3.45092 12.9858 3.45092C18.2674 3.45092 22.5491 7.73259 22.5491 13.0143C22.5491 18.296 18.2674 22.5778 12.9858 22.5778ZM12.9858 0.0285645C5.81395 0.0285645 0 5.84261 0 13.0143C0 20.1862 5.81395 26 12.9858 26C20.1575 26 25.9715 20.1862 25.9715 13.0143C25.9715 5.84261 20.1575 0.0285645 12.9857 0.0285645H12.9858Z"
+                fill="#EE4949" />
+            <path
+                d="M13.5198 9.78012C13.5198 8.28898 14.7287 7.08008 16.2199 7.08008C17.7111 7.08008 18.9199 8.28898 18.9199 9.78012C18.9199 11.2715 17.7111 12.4803 16.2199 12.4803C14.7287 12.4803 13.5198 11.2715 13.5198 9.78012ZM13.5198 16.2482C13.5198 14.7571 14.7287 13.5481 16.2199 13.5481C17.7111 13.5481 18.9199 14.7571 18.9199 16.2482C18.9199 17.7395 17.7111 18.9484 16.2199 18.9484C14.7287 18.9484 13.5198 17.7395 13.5198 16.2482ZM7.05176 16.2482C7.05176 14.7571 8.26076 13.5481 9.7519 13.5481C11.2431 13.5481 12.452 14.7571 12.452 16.2482C12.452 17.7395 11.2431 18.9484 9.7519 18.9484C8.26076 18.9484 7.05176 17.7395 7.05176 16.2482ZM7.05176 9.78022C7.05176 8.28898 8.26076 7.08018 9.7519 7.08018C11.2431 7.08018 12.452 8.28898 12.452 9.78022C12.452 11.2716 11.2431 12.4804 9.7519 12.4804C8.26076 12.4804 7.05176 11.2716 7.05176 9.78022Z"
+                fill="#EE4949" />
+        </svg>
+    </span>
+    <span class='hero-logo hero-logo--six'>
+        <svg width="32" height="24" viewBox="0 0 32 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+                d="M14.7826 6.33638V24H0L14.7826 6.33638ZM14.7826 0C14.7826 4.03651 11.4783 7.30639 7.39921 7.30639C3.32016 7.30639 0 4.03651 0 0H14.7826ZM17.2174 24C17.2174 19.9635 20.5217 16.6936 24.6008 16.6936C28.6798 16.6936 31.9842 19.9635 31.9842 24H17.2174ZM17.2174 17.6636V0H32L17.2174 17.6636Z"
+                fill="#008AFF" />
+        </svg>
+    </span>
+</div>
 {% endmacro %}
