--- a/app/partials/template.njk
+++ b/app/partials/template.njk
@@ -74,6 +74,7 @@
     <script src="./plugins/slick/slick.min.js"></script>
     <script src="./plugins/skill-bar/skill.bars.jquery.js"></script>
     <script src="./plugins/isotope/isotope.pkgd.min.js"></script>
+    <script src="./plugins/type-js/typed.min.js"></script>
     <!-- Activation Script -->
     <script src="js/custom.js"></script>
     <script src="js/slider-activations.js"></script>
