--- a/app/scss/pages/comingsoon/_comingsoon.scss
+++ b/app/scss/pages/comingsoon/_comingsoon.scss
@@ -35,6 +35,7 @@
     .hero-newsletter-01{
         .form-control{
             background: var(--bs-white-lilac);
+            box-shadow: none;
         }
     }
 }
