--- a/app/scss/pages/landing-2/_faq.scss
+++ b/app/scss/pages/landing-2/_faq.scss
@@ -24,6 +24,9 @@
                 margin-top: 40px;
             }
         }
+        @media (max-width: 1200px){
+            margin-bottom: 48px;
+        }
     }
 }
 .accordion-01{
