--- a/app/scss/pages/landing-3/_content-03.scss
+++ b/app/scss/pages/landing-3/_content-03.scss
@@ -19,6 +19,9 @@
             @media (min-width:992px) {
                 margin-bottom: 40px;
             }
+            li{
+                align-items: center;
+            }
         }
      }
      &__image-group{
