--- a/app/scss/pages/landing-4/_blog.scss
+++ b/app/scss/pages/landing-4/_blog.scss
@@ -13,4 +13,11 @@
             margin-bottom: 70px;
         }
     }
+    .card-blog--02 {
+        .card-body {
+            p {
+                font-weight: 400;
+            }
+        }
+    }
 }
