--- a/app/scss/pages/landing-5/_about.scss
+++ b/app/scss/pages/landing-5/_about.scss
@@ -31,6 +31,9 @@
                 margin-top: 50px;
             } 
         }
+        .titel{
+            font-weight: 600;
+        }
     }
     &__rectangle{
         position: absolute;
