--- a/app/scss/pages/landing-6/_testimonial.scss
+++ b/app/scss/pages/landing-6/_testimonial.scss
@@ -59,6 +59,12 @@
                     }
                } 
             }
+            .card-content{
+                span{
+                    font-weight: 400;
+                    text-transform: uppercase;
+                }
+            }
         }
         .slick-dots-style-1{
             .slick-dots {
