--- a/app/partials/pages/landing-1/_about.njk
+++ b/app/partials/pages/landing-1/_about.njk
@@ -23,7 +23,7 @@
                                 <li>Office: <span class="text-dark">Kollanpur, Shamoli, Dhaka</span></li>
                             </ul>
                         </div>
-                        <div class="about-bottom d-flex align-items-md-center flex-column flex-md-row">
+                        <div class="about-bottom d-flex align-items-md-center flex-column-reverse flex-md-row">
                             <div class="button-area order-2 order-md-1">
                                 <a class="btn btn-primary" href="#">Download CV
                                     <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
