--- a/app/partials/pages/landing-1/_cta.njk
+++ b/app/partials/pages/landing-1/_cta.njk
@@ -4,7 +4,7 @@
             <div class="cta-section-01__wrapper" style="background-image: url(./image/l-1/cta.png);">
                 <div class="section-content-block text-center text-lg-start" data-aos="fade-right" data-aos-duration="600" data-aos-delay="800">
                     <h6 class="text-white subtitle mb-10">Have Any Project In Mind?</h6>
-                    <h2 class="title text-white">Don’t Be Hesitate To Contact <br class=" d-none d-lg-block"> With Me</h2>
+                    <h2 class="title text-white">Don’t Be Hesitate To Contact With Me</h2>
                 </div>
                 <div class="content-button mt-4 mt-lg-0" data-aos="fade-left" data-aos-duration="600" data-aos-delay="800">
                     <a class="btn btn-1 btn-primary text-white svg-white" href="#">
