--- a/app/partials/pages/landing-1/_skill.njk
+++ b/app/partials/pages/landing-1/_skill.njk
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 col-md-10 col-sm-11" data-aos="fade-right" data-aos-duration="800" data-aos-delay="600">
-                    <div class="skill-section-01__content section-content-block mb-5 mb-lg-0">
+                    <div class="skill-section-01__content section-content-block mb-lg-0">
                         <h6 class="subtitle mb-10 text-primary">Skillset</h6>
                         <h2 class="title">Creative and Professional Skills
                         Experience on Few Area</h2>
