--- a/app/partials/pages/landing-2/_faq.njk
+++ b/app/partials/pages/landing-2/_faq.njk
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-5 col-md-9 col-lg-8">
-                    <div class="section-content-block mb-5 mb-xl-0">
+                    <div class="section-content-block mb-xl-0">
                         <h6 class="subtitle mb-10 text-primary">Answer To</h6>
                         <h2 class="titel">Frequently Asked
                             Questions</h2>
