--- a/app/partials/pages/landing-5/_testimonial.njk
+++ b/app/partials/pages/landing-5/_testimonial.njk
@@ -2,7 +2,7 @@
     <div class="testimonial-section-06">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-6">
+                <div class="col-lg-6 order-2 order-lg-1">
                     <div class="testimonial-section-06__slider">
                         <div class="section-content-block">
                             <h6 class="subtitle mb-10 text-primary">Student’s Feedback</h6>
@@ -57,7 +57,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 order-1 order-lg-2">
                     <div class="testimonial-section-06__image-group">
                         <img src="./image/l-5/testimonial.png" alt="testimonial" class="w-100">
                     </div>
