--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -86,7 +86,7 @@
       }
     }
   }
-  &--02{
+  &--02, &--01, &--03, &--04{
     overflow: hidden;
     flex-direction: column;
     padding: 40px 30px;
@@ -463,6 +463,7 @@
   position: relative;
   img{
       border-radius: 5px;
+      transition: all 0.4s ease-in-out;
   }
   .portfolio-body{
       overflow: hidden;
@@ -508,6 +509,9 @@
   &:hover{
       .portfolio-body{
           transform: translateY(0);
+      }
+      img{
+        transform: scale(1.05);
       }
   }
   &--02{
