--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -321,6 +321,8 @@
                     color: var(--bs-black);
                     transition: .3s;
                     line-height: 1.555555555555556;
+                    border: none;
+                    box-shadow: 0px 8px 35px rgba(210, 217, 224, 0.2);
                     &::placeholder{
                         color: var(--bs-gray);
                     }
