--- a/app/scss/pages/landing-2/_counter.scss
+++ b/app/scss/pages/landing-2/_counter.scss
@@ -50,9 +50,21 @@
                     margin-bottom: 0;
                     margin-right: 30px;
                 }
+                @media (max-width: 991px) {
+                    width: 44px;
+                    height: 44px;
+                    img {
+                      width: 100%;
+                      height: 100%;
+                    }
+                }
             }
             .title{
                 margin-bottom: 5px;
+                text-align: left;
+                @media (max-width: 991px) {
+                    text-align: center;
+                }
             }
         }
     }
