--- a/app/scss/pages/landing-3/_about.scss
+++ b/app/scss/pages/landing-3/_about.scss
@@ -20,4 +20,17 @@
             }
         }
     }
+    &__image-group{
+        height: 761px;
+        width: 575px;
+        margin-left: auto;
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        @media (max-width: 1200px){
+            margin: 0px auto 30px;
+        }
+    }
 }
