--- a/app/scss/pages/landing-3/_hero.scss
+++ b/app/scss/pages/landing-3/_hero.scss
@@ -1,6 +1,7 @@
 @use "../../abstracts/mixins" as *;
 .hero-section-03{
     padding: 95px 0px 30px;
+    position: relative;
    @media (min-width:575px) {
     padding: 115px 0px 40px;
    }
@@ -52,5 +53,42 @@
            background: #EBF6FF;
            z-index: -1;
        }
+   }
+   .hero-logo {
+     background: #FFFFFF;
+     box-shadow: 0px 20px 25px rgba(173, 195, 216, 0.25);
+     border-radius: 5px;
+     transform: matrix(-1, 0, 0, 1, 0, 0);
+     padding: 18px;
+     position: absolute;
+     z-index: 999;
+     @media (max-width: 1023px) {
+        display: none;
+     }
+     &--one{
+        left: 6.3%;
+        top: 16%;
+     }
+     &--two{
+        left: 16%;
+        top: 26%;
+     }
+     &--three{
+        left: 6.8%;
+        top: 46%;
+     }
+     &--four{
+        right: 6.3%;
+        top: 9%;
+     }
+     &--five {
+       right: 16%;
+       top: 24%;
+     }
+
+     &--six {
+       right: 6.8%;
+       top: 44%;
+     }
    }
 }
