--- a/app/scss/pages/landing-3/_software-integrations.scss
+++ b/app/scss/pages/landing-3/_software-integrations.scss
@@ -56,6 +56,8 @@
 }
 .software-card{
     background: white;
+    box-shadow: 0px 15px 30px rgba(210, 217, 224, 0.2);
+    border-radius: 5px;
     padding: 30px 25px;
     @media (min-width:992px) {
         padding: 40px 35px;
@@ -91,7 +93,7 @@
         }
     }
     p{
-        font-weight: 500;
+        font-weight: 400;
         font-size: 16px;
         line-height: 1.555555555555556;
         @media (min-width:575px) {
