--- a/app/scss/pages/landing-4/_content-02.scss
+++ b/app/scss/pages/landing-4/_content-02.scss
@@ -37,4 +37,11 @@
             transform: translateX(-50%);
         }
     }
+    .feature-card {
+      .card-content {
+        p {
+          font-weight: 400;
+        }
+      }
+    }
 }
