--- a/app/scss/pages/landing-4/_testimonial-01.scss
+++ b/app/scss/pages/landing-4/_testimonial-01.scss
@@ -3,9 +3,11 @@
     padding: 60px 0;
     @media (min-width:575px) {
         padding: 80px 0;
+        padding-bottom: 0px;
     }
     @media (min-width:992px) {
         padding: 130px 0;
+        padding-bottom: 0px;
     }
     &::before{
         content: "";
