--- a/app/scss/pages/landing-6/_feature.scss
+++ b/app/scss/pages/landing-6/_feature.scss
@@ -25,4 +25,10 @@
             }
         }
     }
+    .card-img{
+        max-width: 60px;
+        min-width: 60px;
+        max-height: 60px;
+        min-height: 60px;
+    }
 }
