--- a/app/scss/pages/sign-up/_content.scss
+++ b/app/scss/pages/sign-up/_content.scss
@@ -25,6 +25,9 @@
         @media (min-width:992px) {
             width: 50%;
         }
+        @media (max-width: 991px) {
+            display: none;
+        }
        img{   
             width: 100%;
             height: 100%;
@@ -32,33 +35,33 @@
        }
 
     }
-    &::after{
-       position: absolute;
-       content: "";
-       background: rgba(34, 45, 57,0.8);
-       width: 100%;
-       height: 100%; 
-       z-index: -1;
-       @media (min-width:992px) {
-           display: none;
-       }
-    }
+    // &::after{
+    //    position: absolute;
+    //    content: "";
+    //    background: rgba(34, 45, 57,0.8);
+    //    width: 100%;
+    //    height: 100%; 
+    //    z-index: -1;
+    //    @media (min-width:992px) {
+    //        display: none;
+    //    }
+    // }
     .account-form{
         .section-content-block{
             margin-bottom: 30px;
             @media (min-width:992px) {
                 margin-bottom: 50px;
             }
-            .title{
-                @media (max-width:992px) {
-                    color: var(--bs-white) !important;
-                }
-            }
-            p{
-                @media (max-width:992px) {
-                    color: var(--bs-white) !important;
-                }  
-            }
+            // .title{
+            //     @media (max-width:992px) {
+            //         color: var(--bs-white) !important;
+            //     }
+            // }
+            // p{
+            //     @media (max-width:992px) {
+            //         color: var(--bs-white) !important;
+            //     }  
+            // }
         }
         @media (min-width:992px) {
             margin-right: 40px;
